--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "PySide6>=6.6.0",
     "opencv-python>=4.8.1",
     "Pillow>=10.0.1",
+    "pip>=25.0.1",
+    "pyinstaller>=6.16.0",
 ]
 
 [project.metadata]
@@ -16,7 +18,7 @@ copyright = "© 2025 SK Studio"
 author = "SK Studio"
 email = "contact@skstudio.cn"
 description = "专业的视频帧提取工具 - 支持精确帧提取、批量导出、多种格式转换"
-website = "https://github.com/video-frame-extractor/video-frame-extractor"
+website = "https://github.com/Snake-Konginchrist/video-frame-extractor"
 
 [project.metadata.about]
 features = [
